[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Zengor <ialmeida@edu.unifor.br"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "aoc2020"
path = "src/main.rs"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[dependencies]
itertools = "0.9"
petgraph = "0.5"
regex = "1.4"
bitvec = "0.19"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
